--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,3 +57,17 @@ header * {
     font-size: 15px;
     font-weight: 400;
 }
+
+#navigation {
+    justify-content: space-evenly;
+    padding-bottom: 20px;
+    font-size: 16px;
+    font-family: Quicksand, sans-serif;
+    font-weight: 600;
+    width: 100%;
+}
+
+#navigation a {
+    color: #252525;
+    padding: 2px 8px;
+}
