--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,16 +16,21 @@ body {
     background-color: #f3e7e4;
 }
 
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 /* ************************mobile styles***************************** */
 /* header */
 header * {
     background-color: #e7d1c9;
 }
 
-.flex-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#logo {
+    flex-direction: row;
 }
 
 #logo-image {
@@ -35,7 +40,6 @@ header * {
 }
 
 #logo-text {
-    flex-direction: column;
     align-items: flex-start;
     padding-top: 10px;
 }
@@ -59,6 +63,7 @@ header * {
 }
 
 #navigation {
+    flex-direction: row;
     justify-content: space-evenly;
     padding-bottom: 20px;
     font-size: 16px;
@@ -80,12 +85,7 @@ header * {
 }
 
 /* top section styles */
-#top-section {
-    flex-direction: column;
-}
-
 #top-text, #meet-ups {
-    flex-direction: column;
     text-align: center;
     align-self: center;
     line-height: 25px;
