Add default width of 100% for img elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,10 @@ body {
     align-items: center;
 }
 
+img {
+    width: 100%;
+}
+
 /* ************************mobile styles***************************** */
 /* header */
 header * {
