--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ img {
 }
 
 /* ************************mobile styles***************************** */
-/* header */
+/* header styles */
 header * {
     background-color: #e7d1c9;
 }
@@ -203,4 +203,34 @@ header * {
     background-color: #252525;
     color: #e7d1c9;
     border: 1px solid #252525;
+}
+
+/* footer styles */
+#footer {
+    flex-direction: row;
+    align-items: flex-end;
+    height: 30px;
+    width: 100%;
+    padding-top: 20px;
+    background-color: #e7d1c9;
+}
+
+#footer-list {
+    flex-direction: row;
+    margin-right: 20px;
+}
+
+#footer-list i {
+    padding: 10px;
+    font-size: 25px;
+    align-self: flex-end;
+    color: #252525; 
+}
+
+#statement {
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 11px;
+    text-align: center;
+    padding-bottom: 5px;
+    background-color: #e7d1c9;
 }
