--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ img {
     width: 100%;
 }
 
-/* ************************mobile styles***************************** */
+/* ****************************** mobile styles ****************************** */
 /* header styles */
 header * {
     background-color: #e7d1c9;
@@ -99,7 +99,7 @@ header * {
 #top-text h2 {
     font-family: Quicksand, sans-serif;
     font-weight: 600;
-    padding-bottom: 10px;
+    padding: 10px 0;
 }
 
 #meet-ups h3 {
@@ -233,4 +233,12 @@ header * {
     text-align: center;
     padding-bottom: 5px;
     background-color: #e7d1c9;
+}
+
+/* ****************************** tablet styles ****************************** */
+@media only screen and (min-width: 601px) {
+    body {
+        width: 680px;
+        margin: 0 auto;
+    }
 }
