--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ body {
 
 img {
     width: 100%;
+    height: 33.3%;
 }
 
 /* ****************************** mobile styles ****************************** */
@@ -240,5 +241,59 @@ header * {
     body {
         width: 680px;
         margin: 0 auto;
+    }
+}
+
+/* ****************************** laptop styles ****************************** */
+@media only screen and (min-width: 1024px) {
+    body {
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    #logo-name {
+        font-size: 35px;
+    }
+
+    #navigation {
+        margin-bottom: 0;
+        font-size: 18px;
+    }
+    
+    #top-section {
+        flex-direction: row;
+    }
+
+    #top-image {
+        width: 50%;
+    }
+
+    #top-text {
+        width: 50%;
+        margin: 0;
+    }
+
+    #top-text h2 {
+        font-size: 30px;
+        padding-bottom: 12px;
+    }
+
+    #meet-ups {
+        margin: 0;
+    }
+
+    #meet-two {
+        display: initial;
+    }
+
+    #meet-one, #meet-two {
+        align-self: center;
+        margin: 0 auto;
+        font-size: 18px;
+        padding: 5px 0 5px 0;
+    }
+
+    #top-button {
+        margin-bottom: 5px;
     }
 }
