--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ img {
     height: 33.3%;
 }
 
-/* ****************************** mobile styles ****************************** */
+/* ******************** mobile styles ******************** */
 /* header styles */
 header * {
     background-color: #e7d1c9;
@@ -236,7 +236,7 @@ header * {
     background-color: #e7d1c9;
 }
 
-/* ****************************** tablet styles ****************************** */
+/* ******************** tablet styles ******************** */
 @media only screen and (min-width: 601px) {
     body {
         width: 680px;
@@ -244,7 +244,7 @@ header * {
     }
 }
 
-/* ****************************** laptop styles ****************************** */
+/* ******************** laptop styles ******************** */
 @media only screen and (min-width: 1024px) {
     body {
         width: 100%;
@@ -305,7 +305,7 @@ header * {
     }
 }
 
-/* ****************************** desktop styles ****************************** */
+/* ******************** desktop styles ******************** */
 @media only screen and (min-width: 1600px) {
     body {
         max-width: 2000px;
@@ -331,4 +331,44 @@ header * {
     #lower-text h2 {
         margin-bottom: 20px;
     }
+}
+
+/* ******************** dates page styles ******************** */
+.dates-text {
+    text-align: center;
+    padding: 10px;
+}
+
+.dates-text * {
+    padding: 5px 0;
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 18px;
+}
+
+.dates-text h1 {
+    font-family: Quicksand, sans-serif;
+}
+
+/* grid */
+.grid-container {
+    margin: 30px 50px;
+    display: grid;
+    justify-content: center;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-auto-rows: 350px;
+    background-color: #f3e7e4;
+}
+
+.grid-item {
+    background-color: #d7d8ca;
+    border: none;
+    text-align: center;
+    font-family: "Source Sans Pro", sans-serif;
+    padding: 15px 30px;
+}
+
+.grid-item h2 {
+    font-size: 18px;
+    padding: 10px 3px 3px 3px;
 }
