--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,12 +124,12 @@ header * {
     border-radius: 20px;
 }
 
-#top-button {
+.top-button {
     background-color: #e7d1c9;
     border: 1px solid #e7d1c9;
 }
 
-#top-button:hover {
+.top-button:hover {
     background-color: #252525;
     color: #e7d1c9;
     border: 1px solid #252525;
@@ -164,12 +164,12 @@ header * {
     padding: 5px 0 15px 0;
 }
 
-#middle-button {
+.middle-button {
     background-color: #f3e7e4;
     border: 1px solid #f3e7e4;
 }
 
-#middle-button:hover {
+.middle-button:hover {
     background-color: #252525;
     color: #f3e7e4;
     border: 1px solid #252525;
@@ -195,12 +195,12 @@ header * {
     margin-bottom: 15px;
 }
 
-#lower-button {
+.lower-button {
     background-color: #e7d1c9;
     border: 1px solid #e7d1c9;
 }
 
-#lower-button:hover {
+.lower-button:hover {
     background-color: #252525;
     color: #e7d1c9;
     border: 1px solid #252525;
