--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,7 +337,7 @@ header * {
 .dates-text {
     text-align: center;
     padding: 10px;
-    margin: 10px 0;
+    margin-bottom: 10px;
 }
 
 .dates-text * {
@@ -348,20 +348,22 @@ header * {
 
 .dates-text h1 {
     font-family: Quicksand, sans-serif;
+    font-size: 25px;
 }
 
 .dates-text p {
-    margin: 15px 0;
+    padding-bottom: 15px;
 }
 
 /* grid */
 .grid-container {
-    margin: 30px 50px;
+    margin: 20px 85px;
     display: grid;
     justify-content: center;
-    grid-gap: 30px;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    grid-auto-rows: 350px;
+    align-content: center;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+    grid-auto-rows: 340px;
     background-color: #f3e7e4;
 }
 
@@ -374,6 +376,11 @@ header * {
 }
 
 .grid-item h2 {
+    font-size: 20px;
+    padding-bottom: 5px;
+}
+
+.grid-item p {
     font-size: 18px;
     padding: 10px 3px 3px 3px;
 }
