Fix bug - move icons in lower section of homepage to be nested in li so not direct child of ul

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,8 +191,8 @@ header * {
     font-weight: 400;
 }
 
-#lower-text li {
-    margin-bottom: 15px;
+#lower-text ul {
+    margin: 10px 0 15px 0;
 }
 
 .lower-button {
