--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,6 +297,12 @@ footer {
     padding: 5px 20px;
 }
 
+.grid-item:hover {
+    background-color: #ced8ca;
+    border-style: outset;
+    border-color: #e7e7e7;
+}
+
 .activity-button {
     width: 50px;
     height: 50px;
