Add Youtube video to support page and style with responsive code

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,6 +351,22 @@ footer {
     background-color: #d7d8ca;
 }
 
+/* make embedded youtube video responsive - code from https://www.youtube.com/watch?v=9YffrCViTVk */
+.iframe-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+
+  .iframe-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
 /* ******************** tablet styles ******************** */
 @media only screen and (min-width: 601px) {
     body {
