--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,7 +270,7 @@ footer {
     justify-content: center;
     align-content: center;
     grid-gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(340px, 340px));
     grid-auto-rows: 340px;
     background-color: #f3e7e4;
 }
