--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -529,6 +529,36 @@ input[radio] {
     .support-section img {
         width: 50%;
     }
+
+    .contact-section {
+        flex-direction: row;
+        margin-bottom: 40px;
+    }
+
+    .contact-item {
+        width: 50%;
+    }
+
+    form {
+        min-width: 300px;
+        max-width: 575px;
+    }
+
+    .contact-details {
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: baseline;
+    }
+
+    .contact-details p {
+        padding-bottom: 80px;
+    }
+
+    .map-container {
+        width: 100%;
+        height: 400px;
+        margin: 0 auto;
+    }
 }
 
 /* ******************** desktop styles ******************** */
