--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,15 +219,20 @@ footer {
 
 #lower-text h2 {
     font-family: Quicksand, sans-serif;
-    line-height: 25px;
-}
-
-#lower-text h3, #lower-text li {
-    font-weight: 400;
+    line-height: 18px;
 }
 
 #lower-text ul {
     margin: 10px 0 15px 0;
+}
+
+#lower-text h3, #lower-text li {
+    font-weight: 400;
+    padding-bottom: 15px;
+}
+
+#lower-text i {
+    font-size: 25px;
 }
 
 .lower-button {
