Amend .statement to be a class throughout all pages and update h tag for .statement on thank you page to ensure sequential

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ footer {
     color: #252525; 
 }
 
-#statement {
+.statement {
     font-family: "Source Sans Pro", sans-serif;
     font-size: 11px;
     text-align: center;
