--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,12 +221,13 @@ footer {
 #lower-text {
     text-align: center;
     font-family: "Source Sans Pro", sans-serif;
-    padding: 20px;
+    padding: 12px 20px;
 }
 
 #lower-text h2 {
     font-family: Quicksand, sans-serif;
     line-height: 18px;
+    padding-bottom: 5px;
 }
 
 #lower-text ul {
@@ -239,7 +240,7 @@ footer {
 }
 
 #lower-text i {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .lower-button {
