Add media query to grid on dates page so a max of 4 columns appear of larger screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -648,4 +648,10 @@ textarea {
     #lower-text h2 {
         margin-bottom: 20px;
     }
+
+    /* dates page styles */
+
+    .grid-container {
+        grid-template-columns: repeat(4, 340px);
+    }
 }
